@@ -150,6 +150,7 @@ class Thin < Atchoum::Website
       li { a "James on Software", :href => 'http://jamesgolick.com/' }
       li { a "FlashDen", :href => 'http://flashden.net/' }
       li { a "Calico Web Development", :href => 'http://www.calicowebdev.com/' }
+      li { a "Gitorious", :href => 'http://gitorious.org/' }
     end
     
     p { "If you'd like to have your site listed here, #{a 'drop me an email', :href => 'mailto:macournoyer@gmail.com'}" }
