@@ -1,4 +1,6 @@
 == 0.6.2 Rambo release
+ * pid and log files in cluster are no longer required to be relative to the
+   app directory (chdir option), fixes #24
  * Revert to using #each when building response headers under Ruby 1.8,
    solves an issue w/ Camping adapter, fixes #22
  * Restructure thin script options in 3 sections: server, daemon and cluster
